@@ -1,5 +1,10 @@
 Post v23.09.0
 -------------
+  - DNS now have an "options" column for configuration of extra options.
+  - A new DNS option "ovn-owned" has been added to allow defining domains
+    that are owned only by ovn, queries for that domain will not be processed
+    externally.
+
 
 OVN v23.09.0 - 15 Sep 2023
 --------------------------
